--- a/meta-inventec/meta-transformers/conf/local.conf.sample
+++ b/meta-inventec/meta-transformers/conf/local.conf.sample
@@ -14,6 +14,27 @@
 #
 # Machine Selection
 #
+# You need to select a specific machine to target the build with. There are a selection
+# of emulated machines available which can boot and run in the QEMU emulator:
+#
+#MACHINE ?= "qemuarm"
+#MACHINE ?= "qemuarm64"
+#MACHINE ?= "qemumips"
+#MACHINE ?= "qemuppc"
+#MACHINE ?= "qemux86"
+#MACHINE ?= "qemux86-64"
+#
+# There are also the following hardware board target machines included for
+# demonstration purposes:
+#
+#MACHINE ?= "beaglebone"
+#MACHINE ?= "genericx86"
+#MACHINE ?= "genericx86-64"
+#MACHINE ?= "mpc8315e-rdb"
+#MACHINE ?= "edgerouter"
+#
+# This sets the default machine to be qemux86 if no other machine is selected:
+
 MACHINE ??= "transformers"
 
 #
@@ -65,7 +86,7 @@ MACHINE ??= "transformers"
 # Ultimately when creating custom policy, people will likely end up subclassing
 # these defaults.
 #
-DISTRO ?= "openbmc-openpower"
+DISTRO ?= "openbmc-phosphor"
 # As an example of a subclass there is a "bleeding" edge policy configuration
 # where many versions are set to the absolute latest code from the upstream
 # source control systems. This is just mentioned here as an example, its not
@@ -87,7 +108,7 @@ DISTRO ?= "openbmc-openpower"
 PACKAGE_CLASSES ?= "package_ipk"
 
 #
-# SDK target architecture
+# SDK/ADT target architecture
 #
 # This variable specifies the architecture to build SDK items for and means
 # you can build the SDK packages for architectures other than the machine you are
@@ -95,7 +116,10 @@ PACKAGE_CLASSES ?= "package_ipk"
 # Supported values are i686, x86_64, aarch64
 #SDKMACHINE ?= "i686"
 
-SANITY_TESTED_DISTROS:append ?= " RedHatEnterpriseWorkstation-6.*"
+SANITY_TESTED_DISTROS:append ?= " \
+            ubuntu-18.04 \n \
+            ubuntu-20.04 \n \
+            "
 
 #
 # Extra image configuration defaults
@@ -130,7 +154,7 @@ EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 # enable extra features. Some available options which can be included in this variable
 # are:
 #   - 'buildstats' collect build statistics
-USER_CLASSES ?= "buildstats"
+USER_CLASSES ?= "buildstats image-prelink"
 
 #
 # Runtime testing of images
@@ -217,6 +241,7 @@ BB_DISKMON_DIRS ??= "\
 # By default native qemu will build with a builtin VNC server where graphical output can be
 # seen. The line below enables the SDL UI frontend too.
 PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
+PACKAGECONFIG:append:pn-nativesdk-qemu = " sdl"
 # By default libsdl2-native will be built, if you want to use your host's libSDL instead of
 # the minimal libsdl built by libsdl2-native then uncomment the ASSUME_PROVIDED line below.
 #ASSUME_PROVIDED += "libsdl2-native"
