--- a/meta-inventec/meta-transformers/conf/machine/transformers.conf
+++ b/meta-inventec/meta-transformers/conf/machine/transformers.conf
@@ -1,6 +1,8 @@
 KMACHINE = "aspeed"
 KERNEL_DEVICETREE = "${KMACHINE}-bmc-inventec-${MACHINE}.dtb"
 
+SOCSEC_SIGN_ENABLE = "0"
+
 require conf/machine/include/ast2600.inc
 require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/inventec.inc
@@ -11,8 +13,12 @@ UBOOT_DEVICETREE = "ast2600-transformers"
 # To build a 64MB image, set FLASH_SIZE value to "65536".
 FLASH_SIZE = "65536"
 # Overwrite flash offsets
-FLASH_UBOOT_OFFSET = "0"
-FLASH_KERNEL_OFFSET = "1024"
-FLASH_ROFS_OFFSET = "10240"
-FLASH_RWFS_OFFSET = "43008"
+FLASH_UBOOT_OFFSET:flash-65536 = "0"
+FLASH_KERNEL_OFFSET:flash-65536 = "1024"
+FLASH_ROFS_OFFSET:flash-65536 = "10240"
+FLASH_RWFS_OFFSET:flash-65536 = "43008"
+
+# If set to boolean true ('yes', 'y', 'true', 't', '1'), /var/log links to /var/volatile/log.
+# If set to boolean false ('no', 'n', 'false', 'f', '0'), /var/log is on persistent storage.
+VOLATILE_LOG_DIR = "false"
 
