--- a/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
+++ b/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
@@ -69,7 +69,9 @@ CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_ADVANCED is not set
 CONFIG_VLAN_8021Q=y
 CONFIG_NET_NCSI=y
+COFIG_NCSI_OEM_CMD_GET_MAC=y
 # CONFIG_WIRELESS is not set
+CONFIG_PCI=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
@@ -79,7 +81,7 @@ CONFIG_MTD_PARTITIONED_MASTER=y
 CONFIG_MTD_SPI_NOR=y
 # CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
 CONFIG_SPI_ASPEED_SMC=y
-CONFIG_SPI_ASPEED=y
+# CONFIG_SPI_ASPEED is not set
 CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_FASTMAP=y
 CONFIG_MTD_UBI_BLOCK=y
@@ -105,7 +107,7 @@ CONFIG_NETCONSOLE=y
 CONFIG_FTGMAC100=y
 # CONFIG_NET_VENDOR_HISILICON is not set
 # CONFIG_NET_VENDOR_HUAWEI is not set
-# CONFIG_NET_VENDOR_INTEL is not set
+CONFIG_NET_VENDOR_INTEL=y
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
@@ -144,6 +146,7 @@ CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_8250_NR_UARTS=6
 CONFIG_SERIAL_8250_RUNTIME_UARTS=6
 CONFIG_SERIAL_8250_EXTENDED=y
+CONFIG_SERIAL_8250_ASPEED=y
 CONFIG_SERIAL_8250_ASPEED_VUART=y
 CONFIG_SERIAL_8250_SHARE_IRQ=y
 CONFIG_SERIAL_8250_DW=y
@@ -176,8 +179,10 @@ CONFIG_SENSORS_LM75=y
 CONFIG_SENSORS_NCT7904=y
 CONFIG_SENSORS_OCC_P8_I2C=y
 CONFIG_SENSORS_OCC_P9_SBE=y
-//CONFIG_SENSORS_PECI_CPUTEMP is not set
-//CONFIG_SENSORS_PECI_DIMMTEMP is not set
+CONFIG_SENSORS_PECI_CPUTEMP=y
+CONFIG_SENSORS_PECI_DIMMTEMP=y
+CONFIG_SENSORS_PECI_CPUPOWER=y
+CONFIG_SENSORS_PECI_DIMMPOWER=y
 CONFIG_PMBUS=y
 CONFIG_SENSORS_ADM1275=y
 CONFIG_SENSORS_IBM_CFFPS=y
@@ -233,9 +238,16 @@ CONFIG_RTC_DRV_RV8803=y
 CONFIG_RTC_DRV_ASPEED=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_IOMMU_SUPPORT is not set
+CONFIG_ASPEED_BMC_DEV=y
+CONFIG_ASPEED_HOST_BMC_DEV=y
 CONFIG_ASPEED_LPC_CTRL=y
 CONFIG_ASPEED_LPC_SNOOP=y
 CONFIG_ASPEED_P2A_CTRL=y
+CONFIG_ASPEED_XDMA=y
+CONFIG_ASPEED_MCTP=y
+CONFIG_ASPEED_OTP=y
+CONFIG_ASPEED_ESPI=y
+CONFIG_ASPEED_UART_ROUTING=y
 CONFIG_IIO=y
 CONFIG_ASPEED_ADC=y
 CONFIG_MAX1363=y
@@ -304,7 +316,6 @@ CONFIG_THERMAL=y
 CONFIG_MDIO_ASPEED=y
 CONFIG_ASPEED_ESPI_SLAVE=y
 CONFIG_MMC_SDHCI_IO_ACCESSORS=y
-CONFIG_SPI_ASPEED=y
 CONFIG_JTAG=y
 CONFIG_JTAG_ASPEED=y
 CONFIG_VIRTUAL=y
@@ -316,3 +327,51 @@ CONFIG_USB_F_RNDIS=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_ETH=y
 CONFIG_USB_ETH_RNDIS=y
+CONFIG_ASPEED_VGA_SHAREDMEM=y
+CONFIG_SENSORS_SBTSI=y
+CONFIG_SENSORS_MAX31790=y
+CONFIG_SENSORS_EMC2305=y
+CONFIG_SENSORS_EMC1403=y
+CONFIG_SENSORS_PAC193X=y
+CONFIG_MAX1363=y
+CONFIG_I3C=y
+CONFIG_I3CDEV=y
+CONFIG_USB_HUB_USB251XB=y
+CONFIG_SENSORS_TSOD=y
+CONFIG_SENSORS_SBRMI=y
+
+CONFIG_PWM=y
+CONFIG_HWMON=y
+CONFIG_SENSORS_PWM_FAN=y
+CONFIG_PWM_SYSFS=y
+CONFIG_PWM_ASPEED_AST2600=y
+CONFIG_SENSORS_TACH_ASPEED_AST2600=y
+
+
+# NFS support
+CONFIG_EXPERT=y
+CONFIG_NETWORK_FILESYSTEMS=y
+CONFIG_FILE_LOCKING=y
+CONFIG_MULTIUSER=y
+CONFIG_KERNFS=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_V2=y
+CONFIG_NFS_V3=y
+CONFIG_NFS_V3_ACL=y
+CONFIG_NFS_V4=y
+CONFIG_NFS_V4_1=y
+CONFIG_NFS_V4_2=y
+CONFIG_PNFS_FILE_LAYOUT=y
+CONFIG_PNFS_BLOCK=y
+CONFIG_PNFS_FLEXFILE_LAYOUT=y
+CONFIG_NFS_V4_1_IMPLEMENTATION_ID_DOMAIN="kernel.org"
+CONFIG_NFS_V4_1_MIGRATION=y
+# CONFIG_NFS_USE_LEGACY_DNS is not set
+CONFIG_NFS_USE_KERNEL_DNS=y
+CONFIG_NFS_DISABLE_UDP_SUPPORT=y
+# CONFIG_NFS_V4_2_READ_PLUS is not set
+# CONFIG_NFSD is not set
+CONFIG_NFS_ACL_SUPPORT=y
+CONFIG_NFS_COMMON=y
+CONFIG_NFS_V4_2_SSC_HELPER=y
+
