--- a/meta-inventec/meta-transformers/conf/local.conf.sample
+++ b/meta-inventec/meta-transformers/conf/local.conf.sample
@@ -35,7 +35,7 @@
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
 
-MACHINE ??= "transformers"
+MACHINE ?= "transformers"
 
 #
 # Where to place downloads
@@ -154,7 +154,7 @@ EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 # enable extra features. Some available options which can be included in this variable
 # are:
 #   - 'buildstats' collect build statistics
-USER_CLASSES ?= "buildstats image-prelink"
+USER_CLASSES ?= "buildstats"
 
 #
 # Runtime testing of images
