Bug 1347 - [SW][Common] Telemetry Service - Log Configuration
Symptom/Reason:
- MS requirement
  - M-BMC-MAN-0080
  - M-BMC-MAN-0081
  - M-BMC-MAN-0082
  - M-BMC-MAN-0084
  - M-BMC-MAN-0085
  - M-BMC-MAN-0086

Root Cause:
- N/A

Solution/Change:
- [rsyslog]
  - Add log template IPMICmdTemplate
  - Add new configurations for log rotation
- [transformers-init]
  - Add symbolic link for /var/log under /var/wcs/home
- [transformers-nuv-init]
  - Add symbolic link for /var/log under /var/wcs/home

Entry Test:
- N/A

--- a/meta-inventec/meta-common/recipes-extened/rsyslog/rsyslog/rsyslog.conf
+++ b/meta-inventec/meta-common/recipes-extened/rsyslog/rsyslog/rsyslog.conf
@@ -13,6 +13,23 @@
 module(load="imjournal" StateFile="/var/log/state"
                         RateLimit.Interval="60"
                         RateLimit.Burst="20000")
+$ModLoad imklog
+
+template(name="DEFAULT_FileFormat" type="list") {
+     property(name="timereported" dateFormat="rfc3339")
+     constant(value=" ")
+     property(name="hostname")
+     constant(value=" ")
+     property(name="syslogpriority-text")
+     constant(value=" ")
+     property(name="syslogtag")
+     property(name="msg" spifno1stsp="on")
+     property(name="msg" droplastlf="on")
+     constant(value="\n")
+}
+
+kern.*                  -/var/log/kern.log;DEFAULT_FileFormat
+*.crit;kern.none        -/var/log/syslog;DEFAULT_FileFormat
 
 # Template for IPMI SEL messages
 # "<timestamp> <ID>,<Type>,<EventData>,[<Generator ID>,<Path>,<Direction>]"
@@ -55,11 +72,29 @@ template(name="CrashTemplate" type="list") {
     constant(value="\n")
 }
 
+# Template for IPMI command request & response
+# "<timestamp> <Channel ID>,<CmdArgs>"
+template(name="IPMICmdTemplate" type="list") {
+    property(name="timereported" dateFormat="rfc3164")
+    constant(value=" ")
+    property(name="$!IPMI_CHANNEL")
+    constant(value=", ")
+    property(name="$!IPMI_CMD_ARGS")
+    constant(value="\n")
+}
+
 # If the journal entry has the IPMI SEL MESSAGE_ID, save as IPMI SEL
 # The MESSAGE_ID string is generated using journalctl and must match the
 # MESSAGE_ID used in IPMI to correctly find the SEL entries.
 if ($!MESSAGE_ID == "b370836ccf2f4850ac5bee185b77893a") then {
    action(type="omfile" file="/var/lib/sel_log/ipmi_sel" template="IPMISELTemplate")
+}
+
+# If the journal entry has the IPMI SEL MESSAGE_ID, save as IPMI SEL
+# The MESSAGE_ID string is generated using journalctl and must match the
+# MESSAGE_ID used in IPMI to correctly find the SEL entries.
+if ($!MESSAGE_ID == "b370836ccf2f4850ac5bee185b774747") then {
+   action(type="omfile" file="/var/log/ipmi_cmd" template="IPMICmdTemplate")
 }
 
 # If the journal entry has a Redfish MessageId, save as a Redfish event
