--- a/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
+++ b/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
@@ -375,3 +375,7 @@ CONFIG_NFS_ACL_SUPPORT=y
 CONFIG_NFS_COMMON=y
 CONFIG_NFS_V4_2_SSC_HELPER=y
 
+# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_IKCONFIG is not set
+# CONFIG_HOTPLUG_CPU is not set
