Bug 1332 - [Transformers-nuv][OpenBMC][kernel] Firewall rules testing fail on iptables setting
	Symptom/Reason :
		- iptables using the 'state' xtable module will failed with 'no such file or directory' error

	Root Cause:
        - The nuvoton kernel release does not enable the state xtable module by default

    Solution/Change:
        [linux-nuvoton]
			- enable
			CONFIG_NETFILTER_XT_MATCH_STATE=y
			CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
			CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y

    Entry Test:
		iptables -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT return OK
		iptables -L
		Chain INPUT (policy ACCEPT)
		target     prot opt source               destination
		ACCEPT     all  --  anywhere             anywhere             state RELATED,ESTABLISHED

--- a/meta-inventec/meta-transformers-nuv/recipes-kernel/linux/linux-nuvoton/buv-runbmc.cfg
+++ b/meta-inventec/meta-transformers-nuv/recipes-kernel/linux/linux-nuvoton/buv-runbmc.cfg
@@ -180,3 +180,6 @@ CONFIG_NFS_COMMON=y
 CONFIG_NFS_V4_2_SSC_HELPER=y
 
 
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
