Bug 1339 - [Starscream-ast][OpenBMC][IPMI][Media Redirection]RIS Start command failed.
	Symptom/Reason :
		- The start RIS command failed. return unspecified error.

	Root Cause:
        - The NFS kernel module does not enable in the starscream kernel configuration

    Solution/Change:
        [linux-aspeed]
			- Enable NFS kernel module support

    Entry Test:

//start RIS
ipmitool raw 0x34 0xa0 0x08 0x01
return successfully
checking the journal log
Dec 07 05:28:49 starscream ipmid[256]: ipmiOemStartStopRis:325
Dec 07 05:28:49 starscream ipmid[256]: {msmediaredir.cpp:331:ipmiOemStartStopRis}:serviceType=8
Dec 07 05:28:49 starscream ipmid[256]: {msmediaredir.cpp:421:ipmiOemStartStopRis}:RUN rt=0 /bin/mount -t nfs 10.6.141.87:/mnt/nfs /mnt/nfsexport
Dec 07 05:28:49 starscream ipmid[256]: {msmediaredir.cpp:431:ipmiOemStartStopRis}:RUN rt=0 /usr/bin/nbd-server 9753 /mnt/nfsexport/kubuntu.iso
Dec 07 05:28:49 starscream ipmid[2648]: Warning: the oldstyle protocol is no longer supported.
Dec 07 05:28:49 starscream ipmid[2648]: This method now uses the newstyle protocol with a default export
Dec 07 05:28:49 starscream ipmid[2648]: Negotiation: ..size = 2520MB
Dec 07 05:28:49 starscream ipmid[2648]: bs=512, sz=2643034112 bytes
Dec 07 05:28:49 starscream ipmid[2648]: timeout=30
Dec 07 05:28:49 starscream ipmid[256]: {msmediaredir.cpp:453:ipmiOemStartStopRis}:RUN rt=0 /usr/sbin/nbd-client -p -t 30 127.0.0.1 9753 /dev/nbd8
Dec 07 05:28:49 starscream ipmid[2651]: 2650
Dec 07 05:28:49 starscream ipmid[256]: {msmediaredir.cpp:465:ipmiOemStartStopRis}:RUN rt=0 /usr/sbin/nbd-client -c /dev/nbd8

checking related processes running status
sysadmin@starscream:~# ps | grep nbd
 2857 sysadmin  3708 S    /usr/bin/nbd-server 9753 /mnt/nfsexport/kubuntu.iso
 2859 sysadmin 39564 S    /usr/bin/nbd-server 9753 /mnt/nfsexport/kubuntu.iso
 2860 sysadmin  1992 S    /usr/sbin/nbd-client -p -t 30 127.0.0.1 9753 /dev/nbd8
 2873 sysadmin  2972 S    grep nbd
sysadmin@starscream:~# ls -l /mnt/nfsexp

--- a/meta-inventec/meta-starscream/recipes-kernel/linux/linux-aspeed/starscream.cfg
+++ b/meta-inventec/meta-starscream/recipes-kernel/linux/linux-aspeed/starscream.cfg
@@ -338,3 +338,31 @@ CONFIG_I3CDEV=y
 CONFIG_USB_HUB_USB251XB=y
 CONFIG_SENSORS_TSOD=y
 CONFIG_SENSORS_SBRMI=y
+
+# NFS support
+CONFIG_EXPERT=y
+CONFIG_NETWORK_FILESYSTEMS=y
+CONFIG_FILE_LOCKING=y
+CONFIG_MULTIUSER=y
+CONFIG_KERNFS=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_V2=y
+CONFIG_NFS_V3=y
+CONFIG_NFS_V3_ACL=y
+CONFIG_NFS_V4=y
+CONFIG_NFS_V4_1=y
+CONFIG_NFS_V4_2=y
+CONFIG_PNFS_FILE_LAYOUT=y
+CONFIG_PNFS_BLOCK=y
+CONFIG_PNFS_FLEXFILE_LAYOUT=y
+CONFIG_NFS_V4_1_IMPLEMENTATION_ID_DOMAIN="kernel.org"
+CONFIG_NFS_V4_1_MIGRATION=y
+# CONFIG_NFS_USE_LEGACY_DNS is not set
+CONFIG_NFS_USE_KERNEL_DNS=y
+CONFIG_NFS_DISABLE_UDP_SUPPORT=y
+# CONFIG_NFS_V4_2_READ_PLUS is not set
+# CONFIG_NFSD is not set
+CONFIG_NFS_ACL_SUPPORT=y
+CONFIG_NFS_COMMON=y
+CONFIG_NFS_V4_2_SSC_HELPER=y
+
