Bug 1522 - [SW][Transformers][OpenBMC] Add aspeed mctp dts definition
Symptom/Reason：
- None

Root Cause：
- None

Solution/Change：
- Linux-aspeed

Entry Test：
```
sysadmin@transformers:~# busctl | grep mctp
:1.93                                            507 mctpd           root            :1.93         xyz.openbmc_project.mctpd@smbus.service                           -       -
:1.94                                            506 mctpd           root            :1.94         xyz.openbmc_project.mctpd@pcie.service                            -       -
xyz.openbmc_project.MCTP-pcie                    506 mctpd           root            :1.94         xyz.openbmc_project.mctpd@pcie.service                            -       -
xyz.openbmc_project.MCTP-smbus                   507 mctpd           root            :1.93         xyz.openbmc_project.mctpd@smbus.service                           -       -

sysadmin@transformers:~# busctl tree xyz.openbmc_project.MCTP-pcie
`-/xyz
  `-/xyz/openbmc_project
    `-/xyz/openbmc_project/mctp
      `-/xyz/openbmc_project/mctp/device
        |-/xyz/openbmc_project/mctp/device/29
        |-/xyz/openbmc_project/mctp/device/8
        `-/xyz/openbmc_project/mctp/device/9
```

--- a/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/arch/arm/boot/dts/aspeed-bmc-inventec-transformers.dts
+++ b/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/arch/arm/boot/dts/aspeed-bmc-inventec-transformers.dts
@@ -14,6 +14,7 @@
 
         aliases {
                 serial4 = &uart5;
+                mctp0 = &mctp0;
         };
 
         chosen {
@@ -208,6 +209,12 @@
 
 &uart5 {
         status = "okay";
+};
+
+&mctp0 {
+    tx-payload-bytes= <64>;
+    rx-payload-bytes= <64>;
+    status = "okay";
 };
 
 &uart_routing {
