--- a/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
+++ b/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
@@ -244,6 +244,7 @@ CONFIG_ASPEED_LPC_CTRL=y
 CONFIG_ASPEED_LPC_SNOOP=y
 CONFIG_ASPEED_P2A_CTRL=y
 CONFIG_ASPEED_XDMA=y
+CONFIG_MCTP=y
 CONFIG_ASPEED_MCTP=y
 CONFIG_ASPEED_OTP=y
 CONFIG_ASPEED_ESPI=y
