--- a/meta-inventec/meta-starscream/recipes-phosphor/fan-ctl/phosphor-pid-control/config.json
+++ b/meta-inventec/meta-starscream/recipes-phosphor/fan-ctl/phosphor-pid-control/config.json
@@ -1,59 +1,59 @@
 {
     "version": "01",
     "sensors" : [
-	    {
+        {
             "name": "FAN0",
             "type": "fan",
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/FAN0_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/FAN0_PWM",
             "min": 0,
             "max": 255,
-            "ignoreDbusMinMax": false
+            "ignoreDbusMinMax": true
         },
-	    {
+        {
             "name": "FAN1",
             "type": "fan",
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/FAN1_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/FAN1_PWM",
             "min": 0,
             "max": 255,
-            "ignoreDbusMinMax": false
+            "ignoreDbusMinMax": true
         },
-	    {
+        {
             "name": "FAN2",
             "type": "fan",
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/FAN2_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/FAN2_PWM",
             "min": 0,
             "max": 255,
-            "ignoreDbusMinMax": false
+            "ignoreDbusMinMax": true
         },
-	    {
+        {
             "name": "FAN3",
             "type": "fan",
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/FAN3_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/FAN3_PWM",
             "min": 0,
             "max": 255,
-            "ignoreDbusMinMax": false
+            "ignoreDbusMinMax": true
         },
-	    {
+        {
             "name": "FAN4",
             "type": "fan",
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/FAN4_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/FAN4_PWM",
             "min": 0,
             "max": 255,
-            "ignoreDbusMinMax": false
+            "ignoreDbusMinMax": true
         },
-	    {
+        {
             "name": "FAN5",
             "type": "fan",
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/FAN5_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/FAN5_PWM",
             "min": 0,
             "max": 255,
-            "ignoreDbusMinMax": false
+            "ignoreDbusMinMax": true
         },
         {
             "name": "PUMP1_PWM",
@@ -61,8 +61,8 @@
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/PUMP1_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/PUMP1_PWM",
             "min": 0,
-            "max": 100,
-            "ignoreDbusMinMax": false
+            "max": 255,
+            "ignoreDbusMinMax": true
         },
         {
             "name": "PUMP2_PWM",
@@ -70,8 +70,8 @@
             "readPath": "/xyz/openbmc_project/sensors/fan_tach/PUMP2_RPM",
             "writePath": "/xyz/openbmc_project/control/fanpwm/PUMP2_PWM",
             "min": 0,
-            "max": 100,
-            "ignoreDbusMinMax": false
+            "max": 255,
+            "ignoreDbusMinMax": true
         },
         {
             "name": "CPU1_Temp",
@@ -619,11 +619,13 @@
             "id": 0,
             "minThermalOutput": 0.0,
             "failsafePercent": 60.0,
-            "UpdateTime": 10,
+            "cycleIntervalTimeMS": 100,
+            "updateThermalsTimeMS": 1000,
             "pids": [
                 {
                     "name": "fan-group",
                     "type": "fan",
+                    "acceptAllSensorsMissing": false,
                     "inputs": [
                         "FAN0",
                         "FAN1",
@@ -650,6 +652,7 @@
                 {
                     "name": "Rightear_Temp",
                     "type": "stepwise",
+                    "acceptAllSensorsMissing": true,
                     "inputs": [
                         "Temp_rightear"
                     ],
@@ -674,12 +677,14 @@
                             "5": 50.0
                         },
                         "positiveHysteresis": 0,
-                        "negativeHysteresis": 1
+                        "negativeHysteresis": 1,
+                        "movingAveragePoint": 2
                     }
                 },
                 {
                     "name": "CPU_Temp",
                     "type": "temp",
+                    "acceptAllSensorsMissing": false,
                     "inputs": [
                         "CPU1_Temp",
                         "CPU2_Temp"
@@ -698,12 +703,34 @@
                         "slewNeg": 0.0,
                         "slewPos": 0.0,
                         "positiveHysteresis": 1.0,
-                        "negativeHysteresis": 1.0
+                        "negativeHysteresis": 1.0,
+                        "movingAveragePoint": 2,
+                        "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
+                        }
                     }
                 },
                 {
                     "name": "DIMM_Temp",
                     "type": "temp",
+                    "acceptAllSensorsMissing": false,
                     "inputs": [
                         "DIMM_P0_A0_TEMP",
                         "DIMM_P0_B0_TEMP",
@@ -744,12 +771,34 @@
                         "slewNeg": 0.0,
                         "slewPos": 0.0,
                         "positiveHysteresis": 1.0,
-                        "negativeHysteresis": 1.0
+                        "negativeHysteresis": 1.0,
+                        "movingAveragePoint": 2,
+                        "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
+                        }
                     }
                 },
                 {
                     "name": "riser",
                     "type": "temp",
+                    "acceptAllSensorsMissing": true,
                     "inputs": ["Riser1_Temp",
                                "Riser2_Temp"
                               ],
@@ -767,12 +816,34 @@
                         "slewNeg": 0.0,
                         "slewPos": 0.0,
                         "positiveHysteresis": 1.0,
-                        "negativeHysteresis": 1.0
+                        "negativeHysteresis": 1.0,
+                        "movingAveragePoint": 2,
+                        "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
+                        }
                     }
                 },
                 {
                     "name": "nvme",
                     "type": "temp",
+                    "acceptAllSensorsMissing": true,
                     "inputs": ["BP1_EDSFF_J1", 
                                "BP1_EDSFF_J2",
                                "BP1_EDSFF_J3",
@@ -810,7 +881,28 @@
                         "slewNeg": 0.0,
                         "slewPos": 0.0,
                         "positiveHysteresis": 1.0,
-                        "negativeHysteresis": 1.0
+                        "negativeHysteresis": 1.0,
+                        "movingAveragePoint": 2,
+                        "proportionalGains":{
+                            "reading":{
+                                "0": 0.0,
+                                "1": 1.0,
+                                "2": 3.0,
+                                "3": 5.0,
+                                "4": 7.0,
+                                "5": 9.0,
+                                "6": 11.0
+                            },
+                            "output":{
+                                "0": 0.07,
+                                "1": 0.45,
+                                "2": 0.55,
+                                "3": 0.65,
+                                "4": 0.75,
+                                "5": 0.85,
+                                "6": 1.0
+                            }
+                        }
                     }
                 }
             ]
