--- a/meta-inventec/meta-starscream/recipes-bsp/u-boot/u-boot-aspeed-sdk/starscream-ast2600_defconfig
+++ b/meta-inventec/meta-starscream/recipes-bsp/u-boot/u-boot-aspeed-sdk/starscream-ast2600_defconfig
@@ -11,7 +11,7 @@ CONFIG_DEFAULT_DEVICE_TREE="ast2600-starscream"
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_FIT=y
 CONFIG_USE_BOOTARGS=y
-CONFIG_BOOTARGS="console=ttyS4,115200n8 root=/dev/ram rw mem.devmem=1"
+CONFIG_BOOTARGS="console=ttyS4,115200n8 root=/dev/ram rw mem.devmem=1 quiet"
 CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTCOMMAND="bootm 20100000"
 CONFIG_PRE_CONSOLE_BUFFER=y
@@ -80,3 +80,4 @@ CONFIG_SYSRESET=y
 CONFIG_WDT=y
 CONFIG_DM_I2C_COMPAT=y
 CONFIG_MAX31790_I2C=y
+CONFIG_BOOTDELAY=0
