--- a/meta-inventec/meta-starscream/recipes-kernel/linux/linux-aspeed/starscream.cfg
+++ b/meta-inventec/meta-starscream/recipes-kernel/linux/linux-aspeed/starscream.cfg
@@ -5,8 +5,6 @@ CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PSI=y
 CONFIG_PSI_DEFAULT_DISABLED=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=16
 CONFIG_CGROUPS=y
 CONFIG_BLK_DEV_INITRD=y
@@ -366,3 +364,8 @@ CONFIG_NFS_ACL_SUPPORT=y
 CONFIG_NFS_COMMON=y
 CONFIG_NFS_V4_2_SSC_HELPER=y
 
+
+# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_IKCONFIG is not set
+# CONFIG_HOTPLUG_CPU is not set
