Bug 1513 - [Transformers-nuv][OpenBMC] BMC boot up for Redfish API requests should within 60 seconds.
Root Cause:
	N/A

Solution/Change:
	[u-boot-nuvoton]
		1. Disable the image checksum verify.
		2. Disable the bootdelay.
	[linux-nuvoton]
		1. Optimize the kernel size.
		2. Optimize the image decompress performance. (also apply the optimization on transformers and starscream platform)

Entry Test:
	curl -basic -u root:0penBmc -X GET https://10.6.141.169/redfish/v1/Managers/bmc -ks

--- a/meta-inventec/meta-transformers-nuv/recipes-kernel/linux/linux-nuvoton/buv-runbmc.cfg
+++ b/meta-inventec/meta-transformers-nuv/recipes-kernel/linux/linux-nuvoton/buv-runbmc.cfg
@@ -183,3 +183,9 @@ CONFIG_NFS_V4_2_SSC_HELPER=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+
+# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_IKCONFIG is not set
+# CONFIG_HOTPLUG_CPU is not set
+CONFIG_SQUASHFS_DECOMP_MULTI=y
