--- a/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
+++ b/meta-inventec/meta-transformers/recipes-kernel/linux/linux-aspeed/transformers.cfg
@@ -380,3 +380,4 @@ CONFIG_NFS_V4_2_SSC_HELPER=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_IKCONFIG is not set
 # CONFIG_HOTPLUG_CPU is not set
+CONFIG_SQUASHFS_DECOMP_MULTI=y
